--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,11 +4,12 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
     
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -20,14 +21,27 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
+            <intent-filter>
+		        <action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+		   	    <data android:scheme="http" android:host="subastaya.com" />
+		    </intent-filter>
         </activity>
         <activity
             android:name="com.example.subastaya.AuctionActivity"
-            android:label="@string/title_activity_auction" >
+            android:label="@string/title_activity_auction" >    
         </activity>
+        <activity
+            android:name="com.example.subastaya.MeliOAuthWebActivity"
+            android:label="@string/title_activity_meli_oauth_web" >
+        </activity>
+        <activity android:name=".MyUriActivity">
+		    
+		</activity>
     </application>
 
 </manifest>
